objects/Territory_Definition__c.object
<CustomObject>
    <description>Territory and zip mapping.</description>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImportStatus__c</fullName>
        <label>Import Status</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_DateTime__c</fullName>
        <label>Import DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Territory Definition</label>
    <nameField>
        <displayFormat>TD-{000000}</displayFormat>
        <label>Territory Definition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>